--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>Lapio website</title>
 </head>
-
 <body>
   <!--Tee tehtävät tänne-->
 <h1>Seitsemän veljestä</h1>
+<h2>Tärkeät päähenkilöt</h2>
+<ul>
+  <li>Päähenkilöt</li>
+  <ul>
+    <li>Juhani</li>
+    <li>Tuomas</li>
+    <li>Aapo</li>
+    <li>Simeoni</li>
+    <li>Timo</li>
+    <li>Lauri</li>
+    <li>Eero</li>
+  </ul>
+  <li>Sivuhenkilöt</>
+  <ul>
+    <li>Männistön Venla</li>
+    <li>Lukkari</li>
+    <li>Tammiston Kyösti</li>
+  </ul>
+</ul>
 <h3>Ensimmäinen luku</h3>
 <p><strong>Jukolan </strong>talo, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä, liki <strong><i>Toukolan kylää</i></strong>.
 <br>
