--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
   <!--Tee tehtävät tänne-->
 <h1>Seitsemän veljestä</h1>
+ <!--Alla oleva kuva esittää Seitsemän veljestä kirjan ensimmäistä sivua-->
+<img src="/home/janrauta/lapio22/Lapio-website/assets/Seitsemän_veljestä.png" alt="kuvituskuva" height="320" width="240"/>
 <h2>Tärkeät päähenkilöt</h2>
 <ul>
   <li>Päähenkilöt</li>
