--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <!--Tee tehtävät tänne-->
+<a href="index2.html">Aleksis Kivi</a>
 <h1>Seitsemän veljestä</h1>
  <!--Alla oleva kuva esittää Seitsemän veljestä kirjan ensimmäistä sivua-->
 <img src="/home/janrauta/lapio22/Lapio-website/assets/Seitsemän_veljestä.png" alt="kuvituskuva" height="320" width="240"/>
