--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
   <title>Lapio website</title>
 </head>
-<body>
+  <body>
   <!--Tee tehtävät tänne-->
-<a href="index2.html">Aleksis Kivi</a>
-<h1>Seitsemän veljestä</h1>
- <!--Alla oleva kuva esittää Seitsemän veljestä kirjan ensimmäistä sivua-->
-<img src="/home/janrauta/lapio22/Lapio-website/assets/Seitsemän_veljestä.png" alt="kuvituskuva" height="320" width="240"/>
-<h2>Tärkeät päähenkilöt</h2>
-<ul>
-  <li>Päähenkilöt</li>
+  <a href="index2.html">Aleksis Kivi</a>
+  <h1>Seitsemän veljestä</h1>
+  <!--Alla oleva kuva esittää Seitsemän veljestä kirjan ensimmäistä sivua-->
+  <img src="/home/janrauta/lapio22/Lapio-website/assets/Seitsemän_veljestä.png" alt="kuvituskuva" height="320" width="240"/>
+  <h2>Tärkeät päähenkilöt</h2>
   <ul>
-    <li>Juhani</li>
-    <li>Tuomas</li>
-    <li>Aapo</li>
-    <li>Simeoni</li>
-    <li>Timo</li>
-    <li>Lauri</li>
-    <li>Eero</li>
+    <li>Päähenkilöt</li>
+    <ul>
+      <li>Juhani</li>
+      <li>Tuomas</li>
+      <li>Aapo</li>
+      <li>Simeoni</li>
+      <li>Timo</li>
+      <li>Lauri</li>
+      <li>Eero</li>
+    </ul>
+    <li>Sivuhenkilöt</>
+    <ul>
+      <li>Männistön Venla</li>
+      <li>Lukkari</li>
+      <li>Tammiston Kyösti</li>
+    </ul>
   </ul>
-  <li>Sivuhenkilöt</>
-  <ul>
-    <li>Männistön Venla</li>
-    <li>Lukkari</li>
-    <li>Tammiston Kyösti</li>
-  </ul>
-</ul>
-<h3>Ensimmäinen luku</h3>
-<p><strong>Jukolan </strong>talo, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä, liki <strong><i>Toukolan kylää</i></strong>.
-<br>
-<br>Sen läheinen ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.
-<br>
-<br>jatkuu...
-</p>
-</body>
+  <h3>Ensimmäinen luku</h3>
+  <p><strong>Jukolan </strong>talo, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä, liki <strong><i>Toukolan kylää</i></strong>.</p>
+  <p>Sen läheinen ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.</p>
+  jatkuu...
+  </body>
 
 </html>
