--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
   <body>
   <!--Tee tehtävät tänne-->
-  <a href="index2.html">Aleksis Kivi</a>
-  <h1>Seitsemän veljestä</h1>
+  <!--<a href="index2.html">Aleksis Kivi</a>-->
+  <h1 class="pääotsikko">Seitsemän veljestä</h1>
   <!--Alla oleva kuva esittää Seitsemän veljestä kirjan ensimmäistä sivua-->
   <img src="/home/janrauta/lapio22/Lapio-website/assets/Seitsemän_veljestä.png" alt="kuvituskuva" height="320" width="240"/>
-  <h2>Tärkeät päähenkilöt</h2>
+  <h2 class="alaotsikko">Tärkeät henkilöt</h2>
   <ul>
     <li>Päähenkilöt</li>
     <ul>
@@ -30,9 +30,9 @@
       <li>Tammiston Kyösti</li>
     </ul>
   </ul>
-  <h3>Ensimmäinen luku</h3>
-  <p><strong>Jukolan </strong>talo, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä, liki <strong><i>Toukolan kylää</i></strong>.</p>
-  <p>Sen läheinen ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.</p>
+  <h3 class="alaotsikko">Ensimmäinen luku</h3>
+  <p><strong>Jukolan </strong>talo, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä, liki <strong><i>Toukolan</i></strong> kylää.</p>
+  <p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.</p>
   jatkuu...
   </body>
 
